--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <img src="images/icone menu.png" id="menuIcon" alt="Menu Icon">
         </div>
         <div class="submenu" id="submenu">
-            <a href="https://retarus.inovie.infra/retarus.php">
+            <a href="https://retarus.inovie.infra">
                 <img src="images/Logo_retarus.png" alt="Retarus Logo">
                 Retarus
             </a>
